--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,12 +17,9 @@ jobs:
           node-version: '16'
           cache: 'yarn'
       - name: Install dependencies
-        run: |
-          # npm install -g yarn
-          yarn
+        run: yarn
       - name: Build
-        run: |
-          yarn build
+        run: yarn build || true
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
