--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@ build/
 # Generated files
 .docusaurus/
 .cache-loader
+i18n/
 
 # Misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
