--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -9,14 +9,20 @@ on:
 
 jobs:
   trigger:
-    name: Trigger Webhooks
+    name: Trigger Webhooks on ${{ matrix.name }}
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - name: Vercel
+            webhook-name: WEBHOOK_URL_VERCEL
+          - name: Netlify
+            webhook-name: WEBHOOK_URL_NETLIFY
+          - name: Cloudflare
+            webhook-name: WEBHOOK_URL_CLOUDFLARE
     steps:
       - name: Trigger Webhook use cURL
-        run: |
-          curl -X POST ${{ secrets.WEBHOOK_URL_VERCEL }}
-          curl -X POST ${{ secrets.WEBHOOK_URL_NETLIFY }}
-          curl -X POST ${{ secrets.WEBHOOK_URL_CLOUDFLARE }}
+        run: curl -X POST ${{ secrets[matrix.webhook-name] }}
 
   build:
     name: Pull Translations and Build Site
