--- a/.github/workflows/scheduled-deploy.yml
+++ b/.github/workflows/scheduled-deploy.yml
@@ -6,7 +6,8 @@ on:
 
 jobs:
   trigger:
-    uses: ./.github/workflows/trigger-webhooks.yml
-
-  deploy:
-    uses: ./.github/workflows/deploy-gh-pages.yml
+    name: Trigger Webhook to Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger webhook use curl
+        run: curl -X POST ${{ secrets.WEBHOOK_URL }}
