--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,6 +1,8 @@
 name: Deploy Pages
 on:
-  workflow_call:
+  push:
+    branches:
+      - main
   schedule:
     - cron: 11 0/6 * * *
     - cron: 45 2/6 * * *
